
- Fixed
    Couldn't load tag minecraft:impact_projectiles as it is missing following references: valoria:poisoned_kunai (from main)
    Couldn't load tag valoria:smoke_particle as it is missing following references: valora:infernal_core (from main)

- Fixed Cattail generation
- Fixed Pot generation
- Fixed Server Crashing
- Fixed Goblin Animations

- Nerfed Rune's
- Buffed Silken Kunai

- Added Suspicious Ice generation
- Added Suspicious Iceberg generation
- Added Experience drop from Mobs
- Added Trolls
- Added Succubus
- Added Epic Fight compat (will be released as datapack, later maybe as mod that will fix some issues with abilities of modded weapons and maybe curios)
- Added Crypt Lantern
- Added Sake to Creative Tab
- Added Tomb variations
- Added Pyratite block and Crystal
- Added Silk touch drops to Crystals
- Added Goblin Model Configuration

- Deleted Geodites (Drops moved to ephemarite)
- Deleted Void Crystal

- Changed Tipsy effect balance
- Drinks are placeable now
- Drinks are stackable up to 64 now
- Animated Goblins
- Buffed Katanas
- Reworked Goblins
- Decreased amount of bones dropped from Goblins
- Resprited all the drinks
- Updated to Forge 47.2.20

# Changelog v0.6.1
- Now Valoria requires Lodestone
- Various playability changes

- Added Custom Voxel shapes to some blocks
- Added some Recipes
- Added Firefly like particles, spawned in Shadeforest
- Added Particles for Bandages
- Added Shade Blossom
- Added Shade Blossom Bandage
- Added Pots Generation

- Reworked Stone Crusher (A bit)
- Reworked Accessories
- Reworked BlazeReap
- Reworked Bandages
- Decreased amount of bones dropped from Goblins

- ID change of "pick" -> "prospectors_pick"
- Changed spawnables in Valoria dimension

- Fixed Katana's, Scythe's
- Fixed Scythe Attributes
- Fixed infinite use of Katana
- Fixed Gloves rendering
- Fixed Void armor craft recipe

- Resprited Gazers, totems, winglets
- Resprited Bandages
- Resprited Effects
